배치데이터를 위한 Service로직 변경 및 Test코드 생성