@@ -2,24 +2,25 @@ package com.odd.oddProject.dto;
 
 import com.odd.oddProject.cmn.CustomErrorCode;
 import com.odd.oddProject.cmn.OddException;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 import org.json.simple.parser.ParseException;
-import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.ResponseEntity;
+import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.http.*;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
+import org.springframework.web.util.UriComponentsBuilder;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -28,9 +29,9 @@ import java.util.Map;
 @Component
 public class KakaoApiManagerDto {
     @Value("{{kaokao.apikey}")
-    String key;
-    private String addressRestUrl = "https://dapi.kakao.com/v2/local/search/address.json?analyze_type=exact&page=1&size=10&query=";
-    private Logger LOGGER = LoggerFactory.getLogger(KakaoApiManagerDto.class);
+    String key= "KakaoAK d8cf9d20f843e173c5fe88fc3fb944dc";
+    private String addressRestUrl = "https://dapi.kakao.com/v2/local/search/address.json?analyze_type=similar&page=1&size=10&query=";
+    private static final Logger LOGGER = LogManager.getLogger(KakaoApiManagerDto.class);
     /* 파라미터로 넘겨받은 주소로 위도 경도를 보내준다.*/
     public Map<String, String> tansferAddressPosition(String address) throws URISyntaxException, UnsupportedEncodingException, ParseException {
         ResponseEntity<String> response = kakaoApiUrlConnection(address);
@@ -54,12 +55,10 @@ public class KakaoApiManagerDto {
         return position;
     }
     /* OpenApi데이터로 주소 넘겨 받을시 카카오 형식으로 주소 변환*/
-
     public List<LocationDto> KakaoOpenApifetch(List<String> list) throws UnsupportedEncodingException, URISyntaxException, ParseException, OddException {
         List<LocationDto> loc = new ArrayList<>();
         int kaKaoApiCallcount=0;
         for(String address: list){
-            System.out.println("address >> " + address);
             if(address.equals("")) continue;
            ResponseEntity<String> response = kakaoApiUrlConnection(address);
            JSONParser jsonParser = new JSONParser();
@@ -74,13 +73,15 @@ public class KakaoApiManagerDto {
                                                         .district((String)getTargetData.get("region_2depth_name"))
                                                         .dong((String)getTargetData.get("region_3depth_h_name"))
                                                         .x(Double.parseDouble((String) getTargetData.get("x")))
-                                                        .y(Double.parseDouble((String) getTargetData.get("y"))).build();
+                                                        .y(Double.parseDouble((String) getTargetData.get("y")))
+                                                        .del_yn("Y")
+                                                        .build();
                 LOGGER.info(""+locationDto);
                 kaKaoApiCallcount++;
                 loc.add(locationDto);
            }
         }
-        LOGGER.info(""+loc);
+        System.out.println(loc);
         LOGGER.info("kaKaoCallApiCount : "+ kaKaoApiCallcount);
         return loc;
     }
@@ -89,13 +90,15 @@ public class KakaoApiManagerDto {
     public ResponseEntity<String> kakaoApiUrlConnection(String address) throws UnsupportedEncodingException, URISyntaxException, ParseException {
         RestTemplate restTemplate = new RestTemplate();
         HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
         headers.set("Authorization", key);
+
         HttpEntity<String> entity = new HttpEntity<>("parameter",headers);
-        String encode = URLEncoder.encode(address, "UTF-8");
+        String encode = URLEncoder.encode(address, StandardCharsets.UTF_8);
         String restUrl = addressRestUrl+encode;
-        LOGGER.info(restUrl);
         URI uri = new URI(restUrl);
-        ResponseEntity<String> response = restTemplate.exchange(uri, HttpMethod.POST, entity, String.class);
+
+        ResponseEntity<String> response = restTemplate.exchange(uri, HttpMethod.GET, entity, String.class);
 
         return response;
 
